--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type= "text" href="{{ url_for('static', filename='css/styles.css') }}">
+    <title>Pagina de Inicio</title>
+    <link rel="stylesheet" type= "text" href="{{url_for('static', filename='css/styles.css')}}">
 </head>
 <body>
     <h1>Hola a todos los cuyes</h1>
