--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,12 +1,34 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color : red;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #444;
 }
 
 h1 {
     background-color: aqua;
     border: 1px solid black;
+    text-align: center;
+}
+
+.contenedor {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .rectangulo{
     background-color: blue;
+    height: 200px;
+    width: 200px;
+    border-radius: 20%;
+    margin: 10px;
+    
 }
