--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Inicio</title>
-    <link rel="stylesheet" type= "text" href="{{url_for('static', filename='css/styles.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <h1>Hola a todos los cuyes</h1>
-    <div class="rectangulo">
-        <div>holi</div>
+    <h1>Bienvenido</h1>
+    <div class = "contenedor">
+        <div class="rectangulo"></div>
+        <div class="rectangulo"></div>
+        <div class="rectangulo"></div>
     </div>
 </body>
 </html>
