--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,12 +20,13 @@ h1 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     width: 100%;
 }
 
 .rectangulo{
-    background-color: blue;
+    background-color: auto;
     height: 200px;
     width: 200px;
     border-radius: 20%;
