--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Bienvenido</h1>
     <div class = "contenedor">
-        <div class="rectangulo"></div>
-        <div class="rectangulo"></div>
-        <div class="rectangulo"></div>
+        {%for i in range (0,num)%}
+            <div class="rectangulo" style = "background-color : {{color}};"></div>
+        {%endfor%}
     </div>
 </body>
 </html>
